[gd_scene load_steps=4 format=3 uid="uid://b3oy2gcplojiq"]

[ext_resource type="Script" uid="uid://bc0h2ikfpg18h" path="res://assets/UI/main_menu.gd" id="1_tdcik"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tdcik"]
content_margin_left = 100.0
content_margin_top = 25.0
content_margin_right = 100.0
content_margin_bottom = 25.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdcik"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
bg_color = Color(0.099986, 0.099986, 0.099986, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_tdcik")

[node name="MainPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tdcik")

[node name="MainMenu" type="PanelContainer" parent="MainPanel"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_tdcik")

[node name="BoxContainer" type="BoxContainer" parent="MainPanel/MainMenu"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15
vertical = true

[node name="Label" type="Label" parent="MainPanel/MainMenu/BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 56
text = "CrossCut"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Play" type="Button" parent="MainPanel/MainMenu/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Play"

[node name="Settings" type="Button" parent="MainPanel/MainMenu/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Settings"

[node name="Credits" type="Button" parent="MainPanel/MainMenu/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Credits"

[node name="Quit" type="Button" parent="MainPanel/MainMenu/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Quit"

[node name="Settings" type="PanelContainer" parent="MainPanel"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tdcik")

[node name="BoxContainer" type="BoxContainer" parent="MainPanel/Settings"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 240
vertical = true

[node name="Label" type="Label" parent="MainPanel/Settings/BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 56
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="MainPanel/Settings/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Back
"

[node name="Credits" type="PanelContainer" parent="MainPanel"]
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tdcik")

[node name="BoxContainer" type="BoxContainer" parent="MainPanel/Credits"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 240
vertical = true

[node name="Label" type="Label" parent="MainPanel/Credits/BoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 56
text = "Credits"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="Button" parent="MainPanel/Credits/BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 40
text = "Back
"

[connection signal="pressed" from="MainPanel/MainMenu/BoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainPanel/MainMenu/BoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MainPanel/MainMenu/BoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainPanel/MainMenu/BoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MainPanel/Settings/BoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MainPanel/Credits/BoxContainer/Back" to="." method="_on_back2_pressed"]
